--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </section>
         </div>
         <div id="Experience">
-            <h1>Internships.</h1>
+            <h1>Experience.</h1>
             <p>I've got nothing for now but come back soon 😉</p>
         </div>
         <div id="Internships">
