--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div id="userbio" style="display: block;">A geek and a big dreamer</div>
         <div id="about">
 
-            <span style="display:block;"><i class="fas fa-envelope"></i> &nbsp; <a href="mailto:kaohermann@outlook.fr"></a>Let's get in touch</a></span>
+            <span style="display:block;"><i class="fas fa-envelope"></i> &nbsp; <a href="mailto:kaohermann@outlook.fr" target="_blank" class="socials">Let's get in touch</a></span>
             <span style="display:block;"><i class="fas fa-link"></i> &nbsp; <a href="https://www.snowtrust.fr" target="_blank">SnowTrust: My favorite
           project</a></span>
             <span style="display:block;"><i class="fas fa-map-marker-alt"></i> &nbsp;&nbsp; Limoges, France</span>
