--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="about_section">
                     <span style="display:Block;">I'm passionate about creating clean, unique, elegant and
             functional websites and mobile apps. Early in the morning i'm a
-            trader and the the rest of the day i create the designs you love.
+            trader and the rest of the day i create the designs you love.
             Designs that work.
           </span>
                 </div>
