--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="alternate" hreflang="FR" href="http://hermann.snowtrust.fr/fr.html" />
     <link rel="alternate" hreflang="x-default" href="https://www.hermann.snowtrust.fr/" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -27,12 +26,12 @@
         <div id="username"><span style="display:block;">Hermann KAO</span><a href="https://github.com/HermannKK">@HermannKK</a></div>
         <div id="userbio" style="display: block;">A geek and a big dreamer</div>
         <div id="about">
-
             <span style="display:block;"><i class="fas fa-envelope"></i> &nbsp; <a href="mailto:hermann.kao@snowtrust.fr" target="_blank" class="socials">Let's get in touch</a></span>
-            <span style="display:block;"><i class="fas fa-link"></i> &nbsp; <a href="https://www.snowtrust.fr" target="_blank">SnowTrust: My favorite
+            <span style="display:block;"><i class="fas fa-blog"></i> &nbsp; <a href="https://hermann.codes/" target="_blank">Check my blog</a></span>
+            <span style="display:block;"><i class="fas fa-link"></i> &nbsp; <a href="https://www.snowtrust.fr" target="_blank">SnowTrust: My next
           project</a></span>
             <span style="display:block;"><i class="fas fa-map-marker-alt"></i> &nbsp;&nbsp; Limoges, France</span>
-            <span style="display:block;"><i class="fas fa-user-tie"></i> &nbsp;&nbsp; Available for internship</span>
+            <span style="display:block;"><i class="fas fa-user-tie"></i> &nbsp;&nbsp; Actually Dev intern at <a href="https://nobo.life/" target="_blank">Nobo, France</a></span>
             <span style="display:none;"><i class="fas fa-users"></i> &nbsp; <a>Get my complete resume</a></span>
             <div class="socials">
                 <span style="display:block;"><a href="https://www.twitter.com/hermann_kao" target="_blank" class="socials"><i
