--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             <div id="blogs"></div>
         </div>
         <div id="footer">
-            <a target="_blank">Last updated on Wed 12 December 2019 at 8:37 AM (UTC+01)</a>
+            <a target="_blank">Last updated on Sun 10 May 2020 at 11:57 PM (UTC+01)</a>
         </div>
 
 
