--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 href="https://github.com/HermannKK">@HermannKK</a></div>
         <div id="userbio" style="display: block;">A geek and a big dreamer</div>
         <div id="about">
-            <span style="display:block;"><i class="fas fa-envelope"></i> &nbsp; <a id="open_modal" class="socials">Let's
+            <span style="display:block;"><i class="fas fa-envelope"></i> &nbsp; <a href="mailto:hello@itishermann.me" class="socials">Let's
                     get in touch</a></span>
             <span style="display:block;"><i class="fas fa-blog"></i> &nbsp; <a href="https://hermann.codes/"
                     target="_blank">Check my blog</a></span>
@@ -248,7 +248,6 @@
                         <form onsubmit="send_message()" name="message-form">
                             <input type="text" class="input-group-text" value="" id="name" placeholder="Your name" required autocomplete="name"/>
                             <input type="email" value="" id="email" placeholder="Your email (to reply)" required autocomplete="email"/>
-                            <input type="text" id="phone" placeholder="Your phone (internationnal format)" autocomplete="tel"/>
                             <textarea value="" id="message"  class="zoneDeTexte" required autocomplete="off" placeholder="Hi ..."></textarea>
                             <div id='sending'></div>
                             <input type="submit" name="send" id="send"/>
