--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="icon" href="https://avatars3.githubusercontent.com/u/38349706?v=4" type="image/png">
     <link rel="stylesheet"
         href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
-    <script src="js/message.js"></script>
+    <!-- <script src="js/message.js"></script> -->
 </head>
 
 <body>
