--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     get in touch</a></span>
             <span style="display:block;"><i class="fas fa-blog"></i> &nbsp; <a href="https://hermann.codes/"
                     target="_blank">Check my blog</a></span>
-            <span style="display:block;"><i class="fas fa-link"></i> &nbsp; <a href="https://www.snowtrust.fr"
+            <span style="display:block;"><i class="fas fa-link"></i> &nbsp; <a href="https://snowtrust.fr"
                     target="_blank">SnowTrust: My next
                     project</a></span>
             <span style="display:block;"><i class="fas fa-map-marker-alt"></i> &nbsp;&nbsp; Limoges, France</span>
