--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                     target="_blank">SnowTrust: My next
                     project</a></span>
             <span style="display:block;"><i class="fas fa-map-marker-alt"></i> &nbsp;&nbsp; Limoges, France</span>
-            <span style="display:block;"><i class="fas fa-user-tie"></i> &nbsp;&nbsp; Actually Dev intern at <a
-                    href="https://nobo.life/" target="_blank">Nobo, France</a></span>
+            <span style="display:block;"><i class="fas fa-user-tie"></i> &nbsp;&nbsp; <a
+                    href="https://hermann.codes/now" target="_blank">Actually Dev intern at Nobo, France</a></span>
             <span style="display:none;"><i class="fas fa-users"></i> &nbsp; <a>Get my complete resume</a></span>
             <div class="socials">
                 <span style="display:block;"><a href="https://www.twitter.com/hermann_kao" target="_blank"
