--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="alternate" hreflang="x-default" href="https://www.hermann.snowtrust.fr/" />
+    <link rel="alternate" hreflang="x-default" href="https://www.itishermann.me/" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Hermann KAO</title>
+    <title>Hermann KAO - hello@itishermann.me</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
-
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
@@ -16,9 +15,7 @@
     <script src="https://unpkg.com/magic-grid/dist/magic-grid.min.js"></script>
     <link rel="stylesheet" href="index.css">
     <link rel="icon" href="https://avatars3.githubusercontent.com/u/38349706?v=4" type="image/png">
-    <link rel="stylesheet"
-        href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
-    <!-- <script src="js/message.js"></script> -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
 </head>
 
 <body>
@@ -30,29 +27,28 @@
         <div id="profile_img" style="background: url(https://avatars3.githubusercontent.com/u/38349706?v=4) center;">
         </div>
         <div id="username"><span style="display:block;">Hermann KAO</span><a
-                href="https://github.com/HermannKK">@HermannKK</a></div>
+                href="https://github.com/itishermann" target="_blank">@itishermann</a></div>
         <div id="userbio" style="display: block;">A geek and a big dreamer</div>
         <div id="about">
             <span style="display:block;"><i class="fas fa-envelope"></i> &nbsp; <a href="mailto:hello@itishermann.me" class="socials">Let's
                     get in touch</a></span>
             <span style="display:block;"><i class="fas fa-blog"></i> &nbsp; <a href="https://hermann.codes/"
                     target="_blank">Check my blog</a></span>
-            <span style="display:block;"><i class="fas fa-link"></i> &nbsp; <a href="https://snowtrust.fr"
-                    target="_blank">SnowTrust: My next
-                    project</a></span>
+            <span style="display:block;"><i class="fas fa-link"></i> &nbsp; <a href="https://www.snowtrust.fr"
+                    target="_blank">Father of SnowTrust</a></span>
             <span style="display:block;"><i class="fas fa-map-marker-alt"></i> &nbsp;&nbsp; Limoges, France</span>
-            <span style="display:block;"><i class="fas fa-user-tie"></i> &nbsp;&nbsp; <a
-                    href="https://hermann.codes/now" target="_blank">Actually Dev intern at Nobo, France</a></span>
+            <span style="display:block;"><i class="fas fa-globe-africa"></i> &nbsp;&nbsp; <a
+                    href="https://hermann.codes/now" target="_blank">Busy doing some stuff</a></span>
             <span style="display:none;"><i class="fas fa-users"></i> &nbsp; <a>Get my complete resume</a></span>
             <div class="socials">
-                <span style="display:block;"><a href="https://www.twitter.com/hermann_kao" target="_blank"
+                <span style="display:block;"><a href="https://www.twitter.com/itishermann" target="_blank"
                         class="socials"><i class="fab fa-twitter"></i></a></span>
-                <span style="display:block;"><a href="https://www.dribbble.com/hermann_kao" target="_blank"
-                        class="socials"><i class="fab fa-dribbble"></i></a></span>
-                <span style="display:block;"><a href="https://www.linkedin.com/in/hermann-kao/" target="_blank"
+                <!--<span style="display:block;"><a href="https://www.dribbble.com/hermann_kao" target="_blank"
+                        class="socials"><i class="fab fa-dribbble"></i></a></span>-->
+                <span style="display:block;"><a href="https://www.linkedin.com/in/itishermann/" target="_blank"
                         class="socials"><i class="fab fa-linkedin-in"></i></a></span>
-                <span style="display:block;"><a href="https://www.medium.com/@hermann_kao/" target="_blank"
-                        class="socials"><i class="fab fa-medium-m"></i></a></span>
+                <!--<span style="display:block;"><a href="https://www.medium.com/@hermann_kao/" target="_blank"
+                        class="socials"><i class="fab fa-medium-m"></i></a></span>-->
             </div>
         </div>
     </div>
@@ -76,6 +72,22 @@
         <div id="Internships">
             <h1>Internships.</h1>
             <div class="projects" id="internship_section">
+                <a>
+                    <section>
+                        <div class="section_title">Fullstack Js Developper and DevOps</div>
+                        <div class="about_section">
+                            <span style="display:block;">Security audits<br/>
+                                Express Api Update<br />
+                                Setting up ELK stack, SonarQube and Jenkins
+                            </span>
+                        </div>
+                        <div class="bottom_section">
+                            <span style="display:inline-block;"><i class="fas fa-building"></i>&nbsp; NOBO</span>
+                            <span><i class="fas fa-map-marker-alt"></i>&nbsp; France</span>
+                            <span><i class="fas fa-calendar-week"></i>&nbsp; 04/2020 - 09/2020</span>
+                        </div>
+                    </section>
+                </a>
                 <a>
                     <section>
                         <div class="section_title">Industrial maintenance</div>
@@ -230,10 +242,28 @@
                             <i class="devicon-c-plain-wordmark"></i>
                             <i class="devicon-cplusplus-plain-wordmark"></i>
                             <i class="devicon-java-plain-wordmark"></i>
+                            <i class="devicon-electron-original"></i>
                         </div>
                     </section>
                 </a>
-
+                <a>
+                <section>
+                    <div class="section_title">Server</div>
+                    <div class="about_section">
+                        <i class="devicon-docker-plain"></i>
+                        <i class="devicon-git-plain"></i>
+                        <i class="devicon-gitlab-plain"></i>
+                        <i class="devicon-github-plain"></i>
+                        <i class="devicon-heroku-original"></i>
+                        <i class="devicon-nginx-original"></i>
+                        <i class="devicon-mysql-plain"></i>
+                        <i class="devicon-debian-plain"></i>
+                        <i class="devicon-express-original"></i>
+                        <i class="devicon-nodejs-plain"></i>
+                        <i class="devicon-postgresql-plain"></i>
+                    </div>
+                </section>
+                </a>
             </div>
         </div>
         <div id="footer">
