--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Hermann KAO - hello@itishermann.me</title>
+    <meta name="description" content="Who is Hermann KAO? A geek and a big dreamer">
+    <meta name="robots" content="index, nofollow">
+    <meta name="author" content="Hermann Kao">
+    <meta property="og:title" content="Hermann KAO" />
+    <meta property="og:type" content="profile" />
+    <meta property="og:profile:first_name" content="Hermann" />
+    <meta property="og:profile:last_name" content="kao" />
+    <meta property="og:profile:username" content="itishermann" />
+    <meta property="og:profile:gender" content="male" />
+    <meta property="og:url" content="https://www.itishermann.me" />
+    <meta property="og:image" content="https://avatars3.githubusercontent.com/u/38349706?v=4" />
+
+    <meta property="">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
