--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <link rel="alternate" hreflang="x-default" href="https://www.itishermann.me/" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Hermann KAO - hello@itishermann.me</title>
-    <meta name="description" content="Who is Hermann KAO? A geek and a big dreamer">
+    <title>Hermann KAO - A geek and a big dreamer - hello@itishermann.me</title>
+    <meta name="description" content="A geek and a big dreamer, passionate about creating clean, unique, elegant and functional websites and mobile apps. Forex enthusiast, fullstack developer and DevOps">
+    <meta name="keywords" content="developer, devops, hermann kao, fullstack developper, forex mentor, sysadmin" />
     <meta name="robots" content="index, nofollow">
     <meta name="author" content="Hermann Kao">
     <meta property="og:title" content="Hermann KAO" />
@@ -19,7 +20,19 @@
     <meta property="og:url" content="https://www.itishermann.me" />
     <meta property="og:image" content="https://avatars3.githubusercontent.com/u/38349706?v=4" />
 
-    <meta property="">
+    <script type="application/ld+json">
+        {
+            "@context": "http://schema.org/",
+            "@type": "Person",
+            "name": "Hermann KAO",
+            "jobTitle": "FullStack Developer",
+            "address": {
+                "@type": "PostalAddress",
+                "addressLocality": "LIMOGES",
+                "addressRegion": "Nouvelle-Aquitaine"
+            }
+        }
+    </script>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
