--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Hermann KAO - A geek and a big dreamer - hello@itishermann.me</title>
-    <meta name="description" content="A geek and a big dreamer, passionate about creating clean, unique, elegant and functional websites and mobile apps. Forex enthusiast, fullstack developer and DevOps">
-    <meta name="keywords" content="developer, devops, hermann kao, fullstack developper, forex mentor, sysadmin" />
+    <meta name="description" content="A geek and a big dreamer, passionate about creating clean, unique, elegant and functional websites and mobile apps. Forex trader, fullstack developer and DevOps">
     <meta name="robots" content="index, nofollow">
     <meta name="author" content="Hermann Kao">
     <meta property="og:title" content="Hermann KAO" />
