--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
         <div id="about">
             <span style="display:block;"><i class="fas fa-envelope"></i> &nbsp; <a href="mailto:hello@itishermann.me" class="socials">Let's
                     get in touch</a></span>
-            <span style="display:block;"><i class="fas fa-blog"></i> &nbsp; <a href="https://hermann.codes/"
+            <span style="display:block;"><i class="fas fa-blog"></i> &nbsp; <a href="https://www.hermann.codes/"
                     target="_blank">Check my blog</a></span>
             <span style="display:block;"><i class="fas fa-link"></i> &nbsp; <a href="https://www.snowtrust.fr"
                     target="_blank">Father of SnowTrust</a></span>
             <span style="display:block;"><i class="fas fa-map-marker-alt"></i> &nbsp;&nbsp; Limoges, France</span>
             <span style="display:block;"><i class="fas fa-globe-africa"></i> &nbsp;&nbsp; <a
-                    href="https://hermann.codes/now" target="_blank">Busy doing some stuff</a></span>
+                    href="https://hermann.codes/now" target="_blank">Working on SnowTrust, but available</a></span>
             <span style="display:none;"><i class="fas fa-users"></i> &nbsp; <a>Get my complete resume</a></span>
             <div class="socials">
                 <span style="display:block;"><a href="https://www.twitter.com/itishermann" target="_blank"
