--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="alternate" hreflang="x-default" href="https://www.itishermann.me/" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Hermann KAO - A geek and a big dreamer - hello@itishermann.me</title>
-    <meta name="description" content="A geek and a big dreamer, passionate about creating clean, unique, elegant and functional websites and mobile apps. Forex trader, fullstack developer and DevOps">
+    <title>Hermann KAO - A geek and a big dreamer  hello@itishermann.me</title>
+    <meta name="description" content="A geek and a big dreamer, a forex trader, passionate about creating clean, unique, elegant and functional websites and mobile apps. Learn more on Hermann Kao !">
     <meta name="robots" content="index, nofollow">
     <meta name="author" content="Hermann Kao">
     <meta property="og:title" content="Hermann KAO" />
