--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Hermann KAO - A geek and a big dreamer - hello@itishermann.me</title>
     <meta name="description" content="A geek and a big dreamer, passionate about creating clean, unique, elegant and functional websites and mobile apps. Forex trader, fullstack developer and DevOps">
-    <meta name="robots" content="index, nofollow">
+    <meta name="robots" content="index, follow">
     <meta name="author" content="Hermann Kao">
     <meta property="og:title" content="Hermann KAO" />
     <meta property="og:type" content="profile" />
@@ -56,8 +56,7 @@
                 href="https://github.com/itishermann" target="_blank">@itishermann</a></div>
         <div id="userbio" style="display: block;">A geek and a big dreamer</div>
         <div id="about">
-            <span style="display:block;"><i class="fas fa-envelope"></i> &nbsp; <a href="mailto:hello@itishermann.me" class="socials">Let's
-                    get in touch</a></span>
+            <span style="display:block;" ><i class="fas fa-envelope"></i> &nbsp; <a class="typeform-share link" href="https://form.typeform.com/to/fQMOzzQ6" data-mode="drawer_right" style="color:#FFFFFF;font-size:18px;" target="_blank">Let's get in touch </a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script></span>
             <span style="display:block;"><i class="fas fa-blog"></i> &nbsp; <a href="https://www.hermann.codes/"
                     target="_blank">Check my blog</a></span>
             <span style="display:block;"><i class="fas fa-link"></i> &nbsp; <a href="https://www.snowtrust.fr"
@@ -69,12 +68,8 @@
             <div class="socials">
                 <span style="display:block;"><a href="https://www.twitter.com/itishermann" target="_blank"
                         class="socials"><i class="fab fa-twitter"></i></a></span>
-                <!--<span style="display:block;"><a href="https://www.dribbble.com/hermann_kao" target="_blank"
-                        class="socials"><i class="fab fa-dribbble"></i></a></span>-->
                 <span style="display:block;"><a href="https://www.linkedin.com/in/itishermann/" target="_blank"
                         class="socials"><i class="fab fa-linkedin-in"></i></a></span>
-                <!--<span style="display:block;"><a href="https://www.medium.com/@hermann_kao/" target="_blank"
-                        class="socials"><i class="fab fa-medium-m"></i></a></span>-->
             </div>
         </div>
     </div>
@@ -93,7 +88,77 @@
         </div>
         <div id="Experience">
             <h1>Experience.</h1>
-            <p>I've got nothing for now but come back soon 😉</p>
+            <p>I've got nothing for now but come back, Maybe something will happen soon 😉</p>
+        </div>
+        <div id="Projects">
+            <h1>ProJects.</h1>
+            <div class="projects" id="projects_section">
+                <a>
+                    <section>
+                        <div class="section_title">Fullstack Js Developper and DevOps</div>
+                        <div class="about_section">
+                            <span style="display:block;">Security audits<br/>
+                                Express Api Update<br />
+                                Setting up ELK stack, SonarQube and Jenkins
+                            </span>
+                        </div>
+                        <div class="bottom_section">
+                            <span style="display:inline-block;"><i class="fas fa-building"></i>&nbsp; NOBO</span>
+                            <span><i class="fas fa-map-marker-alt"></i>&nbsp; France</span>
+                            <span><i class="fas fa-calendar-week"></i>&nbsp; 04/2020 - 09/2020</span>
+                        </div>
+                    </section>
+                </a>
+                <a>
+                    <section>
+                        <div class="section_title">Industrial maintenance</div>
+                        <div class="about_section">
+                            <span style="display:block;">Industrial gaz installation maintenance<br />
+                                Electric installations maintenance<br />
+                                Mechanic installation upgrades
+                            </span>
+                        </div>
+                        <div class="bottom_section">
+                            <span style="display:inline-block;"><i class="fas fa-building"></i>&nbsp; SODIGAZ</span>
+                            <span><i class="fas fa-map-marker-alt"></i>&nbsp; Lomé, Togo</span>
+                            <span><i class="fas fa-calendar-week"></i>&nbsp; 07/2019 - 08/2019</span>
+                        </div>
+                    </section>
+                </a>
+                <a>
+                    <section>
+                        <div class="section_title">React Native developper</div>
+                        <div class="about_section">
+                            <span style="display:block;">
+                                Diving into mobile developpement with React-Native<br />
+                                Practicing project management<br />
+                                Practicing Agile
+                            </span>
+                        </div>
+                        <div class="bottom_section">
+                            <span style="display:inline-block;"><i class="fas fa-building"></i>&nbsp; MIDOU</span>
+                            <span><i class="fas fa-map-marker-alt"></i>&nbsp; Rabat, Morocco</span>
+                            <span><i class="fas fa-calendar-week"></i>&nbsp; 10/2018 - 06/2019</span>
+                        </div>
+                    </section>
+                </a>
+                <a>
+                    <section>
+                        <div class="section_title">Automobile maintenance</div>
+                        <div class="about_section">
+                            <span style="display:block;">
+                                Car maintenance<br />
+                                Diving into the world of the automobile and their operation.
+                            </span>
+                        </div>
+                        <div class="bottom_section">
+                            <span style="display:inline-block;"><i class="fas fa-building"></i>&nbsp; DIWA</span>
+                            <span><i class="fas fa-map-marker-alt"></i>&nbsp; Lomé, Togo</span>
+                            <span><i class="fas fa-calendar-week"></i>&nbsp; 07/2018 - 08/2018</span>
+                        </div>
+                    </section>
+                </a>
+            </div>
         </div>
         <div id="Internships">
             <h1>Internships.</h1>
@@ -293,26 +358,7 @@
             </div>
         </div>
         <div id="footer">
-            <a target="_blank">Last updated on Sun 10 May 2020 at 11:57 PM (UTC+01)</a>
-        </div>
-
-        <div id="modal" class="modal-wrapper">
-            <div class="modal">
-                <div class="modal-content">
-                    <span class="close">&times;</span>
-                    <div>
-                        <form onsubmit="send_message()" name="message-form">
-                            <input type="text" class="input-group-text" value="" id="name" placeholder="Your name" required autocomplete="name"/>
-                            <input type="email" value="" id="email" placeholder="Your email (to reply)" required autocomplete="email"/>
-                            <textarea value="" id="message"  class="zoneDeTexte" required autocomplete="off" placeholder="Hi ..."></textarea>
-                            <div id='sending'></div>
-                            <input type="submit" name="send" id="send"/>
-                        </form>
-                    </div>
-                </div>
-                <p id='alert_success'>Message sent</p>
-                <p id='alert_fail'>An error occured please try again</p>
-            </div>
+            <a target="_blank">Last updated on November, 11 2020 at 11:57 PM (UTC +02)</a>
         </div>
     </div>
 
@@ -329,7 +375,7 @@
     </script>
 
     <script>
-        const magicProjectsGrid = new MagicGrid({
+        const magicInternshipGrid = new MagicGrid({
             container: "#internship_section",
             animate: false,
             gutter: 30, // default gutter size
@@ -339,8 +385,18 @@
             useTransform: true
         });
 
-        const magicForksGrid = new MagicGrid({
+        const magicEducationGrid = new MagicGrid({
             container: "#education_section",
+            animate: false,
+            gutter: 30, // default gutter size
+            static: true,
+            useMin: false,
+            maxColumns: 2,
+            useTransform: true
+        });
+
+        const magicProjectsGrid = new MagicGrid({
+            container: "#projects_section",
             animate: false,
             gutter: 30, // default gutter size
             static: true,
@@ -354,16 +410,16 @@
             animate: false,
             gutter: 35, // default gutter size
             static: true,
-
             maxColumns: 6,
             useMin: false,
             useTransform: true
         });
 
         $("document").ready(() => {
-            magicProjectsGrid.listen();
-            magicForksGrid.listen();
+            magicEducationGrid.listen();
+            magicInternshipGrid.listen();
             magicSkillsGrid.listen();
+            magicProjectsGrid.listen();
         });
     </script>
     <script>
