added resume download

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="alternate" hreflang="x-default" href="https://www.itishermann.me/" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <base href="https://itishermann.me/index.html">
     <title>Hermann KAO - A geek and a big dreamer  hello@itishermann.me</title>
     <meta name="description" content="A geek and a big dreamer, a forex trader, passionate about creating clean, unique, elegant and functional websites and mobile apps. Learn more on Hermann Kao !">
     <meta name="robots" content="index, nofollow">
@@ -62,9 +63,9 @@
             <span style="display:block;"><i class="fas fa-link"></i> &nbsp; <a href="https://www.snowtrust.fr"
                     target="_blank">Father of SnowTrust</a></span>
             <span style="display:block;"><i class="fas fa-map-marker-alt"></i> &nbsp;&nbsp; Limoges, France</span>
+            <span style="display:block;"><i class="fas fa-users"></i> &nbsp; <a href="assets/Hermann_kao_French_Resume.pdf" download>Get my french resume</a></span>
             <span style="display:block;"><i class="fas fa-globe-africa"></i> &nbsp;&nbsp; <a
                     href="https://hermann.codes/now" target="_blank">Working on SnowTrust, but available</a></span>
-            <span style="display:none;"><i class="fas fa-users"></i> &nbsp; <a>Get my complete resume</a></span>
             <div class="socials">
                 <span style="display:block;"><a href="https://www.twitter.com/itishermann" target="_blank"
                         class="socials"><i class="fab fa-twitter"></i></a></span>
