updated project section

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <span style="display:block;"><i class="fas fa-link"></i> &nbsp; <a href="https://www.snowtrust.fr"
                     target="_blank">Father of SnowTrust</a></span>
             <span style="display:block;"><i class="fas fa-map-marker-alt"></i> &nbsp;&nbsp; Limoges, France</span>
-            <span style="display:block;"><i class="fas fa-users"></i> &nbsp; <a href="assets/Hermann_kao_French_Resume.pdf" download>Get my french resume</a></span>
+            <span style="display:block;"><i class="fas fa-users"></i> &nbsp; <a href="assets/Hermann_kao_French_Resume.pdf" download target="_blank">Get my french resume</a></span>
             <span style="display:block;"><i class="fas fa-globe-africa"></i> &nbsp;&nbsp; <a
                     href="https://hermann.codes/now" target="_blank">Working on SnowTrust, but available</a></span>
             <div class="socials">
@@ -94,68 +94,75 @@
         <div id="Projects">
             <h1>ProJects.</h1>
             <div class="projects" id="projects_section">
-                <a>
+                <a href="https://github.com/snowtrust/carend" target="_blank">
                     <section>
-                        <div class="section_title">Fullstack Js Developper and DevOps</div>
+                        <div class="section_title">Carend - A personal Diary</div>
                         <div class="about_section">
-                            <span style="display:block;">Security audits<br/>
-                                Express Api Update<br />
-                                Setting up ELK stack, SonarQube and Jenkins
+                            <span style="display:block;">React native mobile app<br/>
+                                Offline first app<br />
+                                Needed something to start journaling fast
                             </span>
                         </div>
                         <div class="bottom_section">
-                            <span style="display:inline-block;"><i class="fas fa-building"></i>&nbsp; NOBO</span>
-                            <span><i class="fas fa-map-marker-alt"></i>&nbsp; France</span>
-                            <span><i class="fas fa-calendar-week"></i>&nbsp; 04/2020 - 09/2020</span>
+                            <span><i class="fas fa-calendar-week"></i>&nbsp; 11/2020</span>
                         </div>
                     </section>
                 </a>
-                <a>
+                <a href="https://www.hermann.codes" target="_blank">
                     <section>
-                        <div class="section_title">Industrial maintenance</div>
+                        <div class="section_title">Hermann.Codes - Delicious Wiki Blog</div>
                         <div class="about_section">
-                            <span style="display:block;">Industrial gaz installation maintenance<br />
-                                Electric installations maintenance<br />
-                                Mechanic installation upgrades
+                            <span style="display:block;">I needed somewhere to store the solutions to my problems<br />
+                                Made with Ghost<br />
+                                Self Hosted
                             </span>
                         </div>
                         <div class="bottom_section">
-                            <span style="display:inline-block;"><i class="fas fa-building"></i>&nbsp; SODIGAZ</span>
-                            <span><i class="fas fa-map-marker-alt"></i>&nbsp; Lomé, Togo</span>
-                            <span><i class="fas fa-calendar-week"></i>&nbsp; 07/2019 - 08/2019</span>
+                            <span><i class="fas fa-calendar-week"></i>&nbsp; 10/2020</span>
                         </div>
                     </section>
                 </a>
-                <a>
+                <a href="https://shes.link" target="_blank">
                     <section>
-                        <div class="section_title">React Native developper</div>
+                        <div class="section_title">Shes.link - URL Shortener</div>
+                        <div class="about_section">
+                            <span style="display:block;">I was trying to practice postgresql and heroku<br />
+                                API First structure<br />
+                                Written with node.js
+                            </span>
+                        </div>
+                        <div class="bottom_section">
+                            <span><i class="fas fa-calendar-week"></i>&nbsp; 09/2020</span>
+                        </div>
+                    </section>
+                </a>
+                <a href="https://agenda-dynamique.com" target="_blank">
+                    <section>
+                        <div class="section_title">Agenda Dynamique - Event Calendar for Limousin</div>
                         <div class="about_section">
                             <span style="display:block;">
-                                Diving into mobile developpement with React-Native<br />
-                                Practicing project management<br />
-                                Practicing Agile
+                                Switching from old HTTP for HTTPS<br />
+                                Building an mobile app from scratch in React-Native<br />
+                                Publishing the app to google play store
                             </span>
                         </div>
                         <div class="bottom_section">
-                            <span style="display:inline-block;"><i class="fas fa-building"></i>&nbsp; MIDOU</span>
-                            <span><i class="fas fa-map-marker-alt"></i>&nbsp; Rabat, Morocco</span>
-                            <span><i class="fas fa-calendar-week"></i>&nbsp; 10/2018 - 06/2019</span>
+                            <span><i class="fas fa-calendar-week"></i>&nbsp; 04/2020</span>
                         </div>
                     </section>
                 </a>
-                <a>
+                <a href="https://snowtrust.fr" target="_blank">
                     <section>
-                        <div class="section_title">Automobile maintenance</div>
+                        <div class="section_title">SnowTrust - Web developpement agency</div>
                         <div class="about_section">
                             <span style="display:block;">
-                                Car maintenance<br />
-                                Diving into the world of the automobile and their operation.
+                                Trying entrepeneurship<br />
+                                Learning management and budgeting process <br />
+                                And yes, i've learned how to make a buisness plan
                             </span>
                         </div>
                         <div class="bottom_section">
-                            <span style="display:inline-block;"><i class="fas fa-building"></i>&nbsp; DIWA</span>
-                            <span><i class="fas fa-map-marker-alt"></i>&nbsp; Lomé, Togo</span>
-                            <span><i class="fas fa-calendar-week"></i>&nbsp; 07/2018 - 08/2018</span>
+                            <span><i class="fas fa-calendar-week"></i>&nbsp; 2019</span>
                         </div>
                     </section>
                 </a>
