automatically close the contact form on submit

--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                 href="https://github.com/itishermann" target="_blank">@itishermann</a></div>
         <div id="userbio" style="display: block;">A geek and a big dreamer</div>
         <div id="about">
-            <span style="display:block;" ><i class="fas fa-envelope"></i> &nbsp; <a class="typeform-share link" href="https://form.typeform.com/to/fQMOzzQ6" data-mode="drawer_right" style="color:#FFFFFF;font-size:18px;" target="_blank">Let's get in touch </a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script></span>
+            <span style="display:block;" ><i class="fas fa-envelope"></i> &nbsp;<a class="typeform-share link" href="https://form.typeform.com/to/fQMOzzQ6" data-mode="drawer_right" style="color:#FFFFFF;font-size:18px;" data-submit-close-delay="5" target="_blank">Let's get in touch </a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> 
+            </span>
             <span style="display:block;"><i class="fas fa-blog"></i> &nbsp; <a href="https://www.hermann.codes/"
                     target="_blank">Check my blog</a></span>
             <span style="display:block;"><i class="fas fa-link"></i> &nbsp; <a href="https://www.snowtrust.fr"
