--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <span style="display:block;"><i class="fas fa-link"></i> &nbsp; <a href="https://www.snowtrust.fr"
                     target="_blank">Father of SnowTrust</a></span>
             <span style="display:block;"><i class="fas fa-map-marker-alt"></i> &nbsp;&nbsp; Limoges, France</span>
-            <span style="display:block;"><i class="fas fa-users"></i> &nbsp; <a href="assets/Hermann_kao_French_Resume.pdf" download target="_blank">Get my french resume</a></span>
+            <span style="display:block;"><i class="fas fa-users"></i> &nbsp; <a href="assets/Hermann_KAO_Resume_EN.pdf" download target="_blank">Get my resume</a></span>
             <span style="display:block;"><i class="fas fa-globe-africa"></i> &nbsp;&nbsp; <a
                     href="https://hermann.codes/now" target="_blank">Working on SnowTrust, but available</a></span>
             <div class="socials">
@@ -367,7 +367,7 @@
             </div>
         </div>
         <div id="footer">
-            <a target="_blank">Last updated on November, 11 2020 at 11:57 PM (UTC +02)</a>
+            <a target="_blank">Last updated on December, 28 2020 at 05:57 PM (UTC +02)</a>
         </div>
     </div>
 
