added French resume

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <span style="display:block;"><i class="fas fa-link"></i> &nbsp; <a href="https://www.snowtrust.fr"
                     target="_blank">Father of SnowTrust</a></span>
             <span style="display:block;"><i class="fas fa-map-marker-alt"></i> &nbsp;&nbsp; Limoges, France</span>
-            <span style="display:block;"><i class="fas fa-users"></i> &nbsp; <a href="assets/Hermann_KAO_Resume_EN.pdf" download target="_blank">Get my resume</a></span>
+            <span style="display:block;"><i class="fas fa-users"></i> &nbsp; Get my resume <a href="assets/Hermann_KAO_Resume_EN.pdf" download target="_blank">EN</a> | <a href="assets/Hermann_KAO_Resume_FR.pdf" download target="_blank">FR</a></span>
             <span style="display:block;"><i class="fas fa-globe-africa"></i> &nbsp;&nbsp; <a
                     href="https://hermann.codes/now" target="_blank">Working on SnowTrust, but available</a></span>
             <div class="socials">
